--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:fragment="head">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Reparaciones</title>
-    <!-- Bootstrap CSS for styling -->
+    <title>TitoxStore</title>
+    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/img/logo.ico}" rel="icon"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="style/main.css">
-    <style>
-        .container {
-            margin-top: 20px;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/style/main.css}">
 </head>
 
 <body>
-    <!-- Navegacion del sitio -->
-    <header>
+    <header th:fragment="header" class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid justify-content-between">
-                <a class="navbar-brand" href="index.html">TITOX STORE</a>
+                <a class="navbar-brand" th:href="@{/}">TITOX STORE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +24,10 @@
                 <div class="collapse navbar-collapse menuItems" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/}">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="FormReparaciones.html">Reparaciones</a>
+                            <a class="nav-link" th:href="@{/reparaciones/FormReparaciones}">Reparaciones</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -69,37 +59,17 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <h2>Formulario de Reparaciones</h2>
-        <form action="/submit-repair-order" method="post">
-            <div class="form-group">
-                <label for="name">Nombre</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="lastname">Apellido</label>
-                <input type="text" class="form-control" id="lastname" name="lastname" required>
-            </div>
-            <div class="form-group">
-                <label for="lastname">Correo Electronico</label>
-                <input type="text" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="repairDate">Fecha de la Reparación</label>
-                <input type="date" class="form-control" id="repairDate" name="repairDate" required>
-            </div>
-            <div class="form-group">
-                <label for="repairDetails">Detalles de la Reparación</label>
-                <textarea class="form-control" id="repairDetails" name="repairDetails" rows="4" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-    </div>
 
-    <!-- Bootstrap JS and its dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+        <div class="container">
+            <div class="col">
+                <p class="lead text-center">
+                    &COPY [[#{plantilla.derechos}]]
+                </p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
