--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -8,6 +8,7 @@
     <link th:href="@{/assets/img/logo.ico}" rel="icon"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" th:href="@{/style/main.css}">
 </head>
 
@@ -35,7 +36,7 @@
                                 Catalogo
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="Catalogo.html">Videojuegos</a></li>
+                                <li><a class="dropdown-item" th:href="@{/catalogo/Catalogo}">Videojuegos</a></li>
                                 <li><a class="dropdown-item" href="Catalogo.html">Consolas</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -60,12 +61,24 @@
         </nav>
     </header>
 
-    <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+    <footer th:fragment="footer" class="text-white mt-auto py-3">
         <div class="container">
-            <div class="col">
-                <p class="lead text-center">
-                    &COPY [[#{plantilla.derechos}]]
-                </p>
+            <div class="row">
+                <!-- Branding and CopyRight -->
+                <div class="col-md-6 mb-3 mb-md-0 text-center text-md-start">
+                    <h5>TITOX STORE</h5>
+                    <small>&COPY; [[#{plantilla.derechos}]]</small>
+                </div>
+
+                <!-- Footer Navigation -->
+                <div class="col-md-6 text-center text-md-end">
+                    <ul class="list-unstyled">
+                        <li><a href="#" th:href="@{/reparaciones/FormReparaciones}" class="text-white">Reparaciones</a></li>
+                        <li><a href="#" th:href="@{/catalogo/Catalogo}" class="text-white">Catálogo</a></li>
+                        <li><a href="#" th:href="@{/about}" class="text-white">Acerca de</a></li>
+                        <li><a href="#" th:href="@{/contact}" class="text-white">Contacto</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
