--- a/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
+++ b/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
@@ -32,6 +32,7 @@
                     <img th:src="@{${item.imagen_catalogo}}" class="card-img-top" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${item.titulo}">Card title</h5>
+                        <h5 class="card-subtitle" th:text="'₡' + ${item.precio}">Card precio</h5>
                         <p class="card-text" th:text="${item.descripcion}">Some quick example text...</p>
                         <a th:href="@{/product/details(item.id)}" class="btn btn-primary">Agregar al Carrito</a>
                     </div>
