Agregando cambios de usuario

--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -51,8 +51,8 @@
                                 Usuario
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
-                                <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" href="signup.html">Registrarse</a></li>
+                                <li><a class="dropdown-item" th:href="@{/usuario/login}">Iniciar Sesión</a></li>
+                                <li><a class="dropdown-item" th:href="@{/usuario/signup}">Registrarse</a></li>
                             </ul>
                         </li>
                     </ul>
