Cambios del inicio de sesion

--- a/Proyecto/src/main/resources/templates/login.html
+++ b/Proyecto/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     <header th:replace="~{layout/plantilla :: header}"/>
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
         <div class="card">
-            <form class="card-body" th:action="@{/login}" method="post">
+            <form class="card-body" th:action="@{/templates/login}" method="post">
                 <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
                 <div class="form-group">
                     <label for="email">Email</label>
