--- a/Proyecto/src/main/resources/templates/registro/signup.html
+++ b/Proyecto/src/main/resources/templates/registro/signup.html
@@ -65,7 +65,7 @@
                       Usuario
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
-                      <li><a class="dropdown-item" href="login.html">Iniciar Sesión</a></li>
+                      <li><a class="dropdown-item" href="../login.html">Iniciar Sesión</a></li>
                       <li><a class="dropdown-item" href="signup.html">Registrarse</a></li>
                     </ul>
                   </li>
