--- a/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
+++ b/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
@@ -60,8 +60,8 @@
                                 Usuario
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
-                                <li><a class="dropdown-item" href="../usuario/login.html">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" href="../usuario/signup.html">Registrarse</a></li>
+                                <li><a class="dropdown-item" href="../login.html">Iniciar Sesión</a></li>
+                                <li><a class="dropdown-item" href="../registro/signup.html">Registrarse</a></li>
                             </ul>
                         </li>
                     </ul>
