--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -52,7 +52,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
                                 <li><a class="dropdown-item" th:href="@{/usuario/login}">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" th:href="@{/usuario/signup}">Registrarse</a></li>
+                                <li><a class="dropdown-item" th:href="@{/registro/Registro}">Registrarse</a></li>
                             </ul>
                         </li>
                     </ul>
