--- a/Proyecto/src/main/resources/templates/index.html
+++ b/Proyecto/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
                             <h4 class="theme-color">Tienda de reparación de videojuegos</h4>
                             <p>En el corazón de la nostalgia y la pasión por los videojuegos, Titox Store emerge como tu destino predilecto para revivir las glorias del pasado y darles una nueva vida. Somos más que una tienda; somos una comunidad dedicada a preservar la magia de las consolas retro y a celebrar la evolución de los videojuegos.</p>
                             <div class="btn-bar">
-                                <a class="px-btn theme" href="catalogo/Catalogo.html">Ver catalogo de videojuevos</a>
+                                <a class="px-btn theme" th:href="@{/catalogo/Catalogo}">Ver catalogo de videojuevos</a>
                                 <a class="px-btn theme-t" href="reparaciones/FormReparaciones.html">Agenda una reparación</a>
                             </div>
                         </div>
