--- a/Proyecto/src/main/resources/templates/registro/Registro.html
+++ b/Proyecto/src/main/resources/templates/registro/Registro.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head th:replace="~{layout/plantilla :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Signup Form</title>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
-
 <body>
-
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        .content-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            min-height: 100vh; /* Use viewport height to ensure it takes at least the height of the viewport */
+            background-color: #f5f5f5;
+        }
+
+        /* Specific styles for elements within .card */
         .card {
-            margin-top: -50px; /* Adjust for the card's height for vertical centering */
-            background-color: #f5f5f5; /* Set background color for the card */
-            padding: 20px; /* Add padding inside the card */
-            border-radius: 8px; /* Optional: Add rounded corners to the card */
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Optional: Add shadow for better aesthetics */
+            width: 24rem; /* Adjust as needed */
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
         }
     </style>
-
     <header th:replace="~{layout/plantilla :: header}"/>
-    <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
+    <div class="content-container">
         <div class="card">
-            <form class="card-body" th:action="@{/templates/login}" method="post">
-                <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
+            <form class="card-body" th:action="@{/usuario/guardar}" th:object="${usuario}" method="post">
+                <h3 class="card-title text-center mb-4">Registro</h3>
+                <div class="form-group">
+                    <label for="username">Usuario</label>
+                    <input type="text" class="form-control" id="username" name="usuario" required>
+                </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+                    <input type="email" class="form-control" id="email" name="correo" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
-                <div class="form-group">
-                </div>
-                <div class="form-group" style="margin-bottom: 10px">
-                    <a href="/signup">¿No tienes cuenta? Regístrate</a>
-                </div>
-
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <button type="submit" class="btn btn-primary btn-block">Registro</button>
             </form>
         </div>
     </div>
@@ -50,5 +61,4 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
