--- a/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
+++ b/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
@@ -61,7 +61,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
                                 <li><a class="dropdown-item" href="../login.html">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" href="../registro/signup.html">Registrarse</a></li>
+                                <li><a class="dropdown-item" href="../registro/Registro.html">Registrarse</a></li>
                             </ul>
                         </li>
                     </ul>
