--- a/Proyecto/src/main/resources/templates/login.html
+++ b/Proyecto/src/main/resources/templates/login.html
@@ -27,8 +27,8 @@
             <form class="card-body" th:action="@{/login}" method="post">
                 <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" name="usuario" required>
+                    <label for="username">Usuario</label>
+                    <input type="text" class="form-control" id="username" name="username" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
