--- a/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
+++ b/Proyecto/src/main/resources/templates/reparaciones/FormReparaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:replace="~{layout/plantilla :: head}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Reparaciones</title>
@@ -20,82 +20,42 @@
     </style>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Navegacion del sitio -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid justify-content-between">
-                <a class="navbar-brand" href="../index.html">TITOX STORE</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse menuItems" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="FormReparaciones.html">Reparaciones</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Catalogo
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../catalogo/Catalogo.html">Videojuegos</a></li>
-                                <li><a class="dropdown-item" href="../catalogo/Catalogo.html">Consolas</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="../catalogo/Catalogo.html">Videojuegos usados</a></li>
-                            </ul>
-                        </li>
-                        <!-- User dropdown for login/signup -->
-                        <li class="nav-item dropdown me-3">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarUserDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Usuario
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarUserDropdown">
-                                <li><a class="dropdown-item" href="../login.html">Iniciar Sesión</a></li>
-                                <li><a class="dropdown-item" href="../registro/Registro.html">Registrarse</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <h2>Formulario de Reparaciones</h2>
-        <form action="/submit-repair-order" method="post">
-            <div class="form-group">
-                <label for="name">Nombre</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="lastname">Apellido</label>
-                <input type="text" class="form-control" id="lastname" name="lastname" required>
-            </div>
-            <div class="form-group">
-                <label for="lastname">Correo Electronico</label>
-                <input type="text" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="repairDate">Fecha de la Reparación</label>
-                <input type="date" class="form-control" id="repairDate" name="repairDate" required>
-            </div>
-            <div class="form-group">
-                <label for="repairDetails">Detalles de la Reparación</label>
-                <textarea class="form-control" id="repairDetails" name="repairDetails" rows="4" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
+    <header th:replace="~{layout/plantilla :: header}"/>
+
+    <div th:if=${param.exito}>
+        <div class="alert alert-info">Se ha registrado exitosamente a
+            la aplicación</div>
     </div>
 
+    <div class="container">
+        <h2>Formulario de Reparaciones</h2>
+        <form th:action="@{/reparaciones/guardar}" method="post">
+            <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" required>
+            </div>
+            <div class="form-group">
+                <label for="apellido">Apellido</label>
+                <input type="text" class="form-control" id="apellido" name="apellido" required>
+            </div>
+            <div class="form-group">
+                <label for="correo_electronico">Correo Electronico</label>
+                <input type="email" class="form-control" id="correo_electronico" name="correo_electronico" required>
+            </div>
+            <div class="form-group">
+                <label for="fecha">Fecha de la Reparación</label>
+                <input type="date" class="form-control" id="fecha" name="fecha" required>
+            </div>
+            <div class="form-group">
+                <label for="Detalles_Reparacion">Detalles de la Reparación</label>
+                <textarea class="form-control" id="Detalles_Reparacion" name="Detalles_Reparacion" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary"  style="margin-top: 20px">Enviar</button>
+        </form>
+    </div>
+    <footer th:replace="~{layout/plantilla :: footer}"/>
     <!-- Bootstrap JS and its dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
