Agregando manejo de usuarios y carrito

--- a/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
+++ b/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
@@ -27,14 +27,17 @@
             </div>
         </div>
         <div id="catalogItems" class="row">
-            <div th:each="item : ${catalogoItems}" class="col-md-4 mb-4">
+            <div th:each="item : ${catalogoItems}" class="col-md-4 mb-4 mr-3">
                 <div class="card" style="width: 18rem;">
                     <img th:src="@{${item.imagen_catalogo}}" class="card-img-top" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${item.titulo}">Card title</h5>
                         <h5 class="card-subtitle" th:text="'₡' + ${item.precio}">Card precio</h5>
                         <p class="card-text" th:text="${item.descripcion}">Some quick example text...</p>
-                        <a th:href="@{/product/details(item.id)}" class="btn btn-primary">Agregar al Carrito</a>
+                        <form th:action="@{/carrito/agregar/{idProducto}(idProducto=${item.id_catalogo})}" method="get">
+                            <input type="hidden" name="catalogoItem" th:value="${item.id_catalogo}" />
+                            <button type="submit" class="btn btn-primary">Agregar al Carrito</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -43,7 +46,10 @@
             </div>
         </div>
     </div>
-    <footer th:replace="~{layout/plantilla :: footer}"/>
+    <div class="container d-flex align-items-center justify-content-center mb-4 mt-4">
+        <a th:href="@{/carrito/verCarrito}" class="btn btn-secondary mt-2">Ver Carrito</a>
+    </div>
+        <footer th:replace="~{layout/plantilla :: footer}"/>
     <script src="../../static/scripts/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
