--- a/Proyecto/src/main/resources/templates/index.html
+++ b/Proyecto/src/main/resources/templates/index.html
@@ -13,13 +13,13 @@
             <div id="carouselExample" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img th:src="@{/assets/img/gamer1.png}" class="d-block w-100" alt="...">
+                  <img th:src="@{/assets/img/gamer1.png}" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img th:src="@{/assets/img/gamer2.png}" class="d-block w-100" alt="...">
+                  <img th:src="@{/assets/img/gamer2.png}" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img th:src="@{/assets/img/gamer3.png}" class="d-block w-100" alt="...">
+                  <img th:src="@{/assets/img/gamer3.png}" class="d-block w-100 object-fit-cover" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
