--- a/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
+++ b/Proyecto/src/main/resources/templates/catalogo/Catalogo.html
@@ -29,8 +29,8 @@
         <div id="catalogItems" class="row">
             <div th:each="item : ${catalogoItems}" class="col-md-4 mb-4 mr-3">
                 <div class="card" style="width: 18rem;">
-                    <img th:src="@{${item.imagen_catalogo}}" class="card-img-top" alt="Card image cap">
-                    <div class="card-body">
+                    <img th:src="@{${item.imagen_catalogo}}" class="card-img-top" style="width: 290px; height: 150px;" alt="Card image cap">
+                    <div class="card-body" style="height: 230px">
                         <h5 class="card-title" th:text="${item.titulo}">Card title</h5>
                         <h5 class="card-subtitle" th:text="'₡' + ${item.precio}">Card precio</h5>
                         <p class="card-text" th:text="${item.descripcion}">Some quick example text...</p>
