--- a/Proyecto/src/main/resources/templates/layout/Plantilla.html
+++ b/Proyecto/src/main/resources/templates/layout/Plantilla.html
@@ -74,7 +74,7 @@
                                     <a class="dropdown-item" th:href="@{/catalogo/CatalogoAdministrador}">Gestionar catalogo</a>
                                 </li>
                                 <li sec:authorize="isAuthenticated() and hasRole('ADMIN')">
-                                    <a class="dropdown-item" th:href="@{/reparaciones/porEmail}">Gestionar reparaciones</a>
+                                    <a class="dropdown-item" th:href="@{/reparaciones/listaAdministrador}">Gestionar reparaciones</a>
                                 </li>
                                 <li sec:authorize="isAuthenticated() and hasRole('ADMIN')">
                                     <form method="post" th:action="@{/logout}">
