--- a/Proyecto/src/main/resources/templates/catalogo/modifica.html
+++ b/Proyecto/src/main/resources/templates/catalogo/modifica.html
@@ -12,8 +12,9 @@
 <div class="container mt-3">
     <h2>Modificar Catálogo</h2>
     <!-- Form to modify catalog items -->
-    <form th:action="@{/catalogo/guardar}" th:object="${catalogo}" method="post">
+    <form th:action="@{/catalogo/modificar}" th:object="${catalogo}" method="post">
         <div class="mb-3">
+            <input type="hidden" th:field="*{id_catalogo}" />
             <label for="titulo" class="form-label">Título:</label>
             <input type="text" id="titulo" th:field="*{titulo}" class="form-control">
         </div>
