--- a/Proyecto/src/main/resources/templates/catalogo/modifica.html
+++ b/Proyecto/src/main/resources/templates/catalogo/modifica.html
@@ -27,6 +27,10 @@
             <input type="text" id="tipoArticulo" th:field="*{tipoArticulo}" class="form-control">
         </div>
         <div class="mb-3">
+            <label for="imagen_catalogo" class="form-label">Imagen:</label>
+            <input type="text" id="imagen_catalogo" th:field="*{imagen_catalogo}" class="form-control">
+        </div>
+        <div class="mb-3">
             <label for="precio" class="form-label">Precio:</label>
             <input type="number" id="precio" th:field="*{precio}" class="form-control">
         </div>
